
Wed Oct 15 13:00:24  2003  Huang-Ming Huang  <hh1@cse.wustl.edu>
        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientRequest_Interceptor.cpp:
          Fixed incorrect retrival of FTGroupRefVersion from a FTGroupComponent.

        * tao/Strategies/SCIOP_Endpoint.cpp:
          Added include "ace/Synch_T.h"

        * orbsvcs/FTRT_Event_Service/consumer:
        * orbsvcs/FTRT_Event_Service/Event_Service/FTRT_Event_Service.mpc:
        * orbsvcs/FTRT_Event_Service/Event_Service/FT_EventService.cpp:
        * orbsvcs/FTRT_Event_Service/Event_Service/FT_EventService.h:
        * orbsvcs/FTRT_Event_Service/Event_Service/svc.conf:
        * orbsvcs/FTRT_Event_Service/Event_Service/TP_Task.h:
        * orbsvcs/FTRT_Event_Service/Factory_Service/EventChannelFactory_i.cpp:
        * orbsvcs/FTRT_Event_Service/Factory_Service/EventChannelFactory_i.h:
        * orbsvcs/FTRT_Event_Service/Factory_Service/factory.cfg:
        * orbsvcs/FTRT_Event_Service/Factory_Service/FTRTEC_Factory_Service.cpp:
        * orbsvcs/FTRT_Event_Service/Factory_Service/FTRTEC_Factory_Service.mpc:
        * orbsvcs/FTRT_Event_Service/ftec:
        * orbsvcs/FTRT_Event_Service/Gateway_Service/FTRTEC_Gateway_Service.cpp:
        * orbsvcs/FTRT_Event_Service/Gateway_Service/FTRTEC_Gateway_Service.mpc:
        * orbsvcs/FTRT_Event_Service/NameService:
        * orbsvcs/FTRT_Event_Service/Readme:
        * orbsvcs/FTRT_Event_Service/supplier:
        * orbsvcs/orbsvcs/FtRtEvent.mpc:
        * orbsvcs/orbsvcs/FTRT.idl:
        * orbsvcs/orbsvcs/FTRT_GroupManager.idl:
        * orbsvcs/orbsvcs/FT_CORBA_ORB.idl:
        * orbsvcs/orbsvcs/FtRtecEventChannelAdmin.idl:
        * orbsvcs/orbsvcs/FtRtecEventComm.idl:
        * orbsvcs/orbsvcs/FtRtEvent/ClientORB/ftrt_clientorb_export.h:
        * orbsvcs/orbsvcs/FtRtEvent/ClientORB/FTRT_ClientORB_Initializer.cpp:
        * orbsvcs/orbsvcs/FtRtEvent/ClientORB/FTRT_ClientORB_Initializer.h: