@@ -1,3 +1,10 @@
+Wed Oct 15 14:20:52 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
+
+	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_PCP_Manager.h: 
+	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_PCP_Manager.cpp: 
+	  Changed ACE_Thread_Mutex to ACE_SYNCH_MUTEX and
+	  ACE_Thread_Condition to ACE_SYNCH_CONDITION to fix compile
+	  errors in SingleThreaded builds.
 
 Wed Oct 15 13:00:24  2003  Huang-Ming Huang  <hh1@cse.wustl.edu>
         * orbsvcs/orbsvcs/FaultTolerance/FT_ClientRequest_Interceptor.cpp:
